# flipper

./: .editorconfig  .flowconfig  .gitignore  build.gradle  build.gradle.kts  cxxpods.yml  flipper.code-workspace  gradle.properties  package.json  settings.gradle  settings.gradle.kts
android/: CMakeLists.txt  build.gradle
android/sample/src/main/java/com/facebook/flipper/sample/: FlipperSampleApplication.java
android/src/main/java/com/facebook/flipper/android/diagnostics/: FlipperDiagnosticFragment.java
android/src/main/java/com/facebook/flipper/nativeplugins/table/: TableMetadata.java
android/src/main/java/com/facebook/flipper/plugins/leakcanary/: RecordLeakService.java
android/src/test/java/com/facebook/flipper/nativeplugins/table/: TableMetadataTestUtils.java
assets/images/logo/: stato_logo_1.psd  symbol-logo.ai  symbol-logo.psd  unions-logo.psd
buildSrc/: build.gradle.kts  ko-gradle-compile.kts  ko-gradle.gradle  settings.gradle.kts
cmake/: AndroidSetup.cmake  Cache.cmake  CxxpodsArch.cmake  Macros.cmake  android-module-path.sh  setup.cmake
cmake/toolchains/: android.cmake  ios.cmake
common/common-stato/: CMakeLists.txt  build.gradle.kts
common/common-stato/src/main/cpp/: CertificateUtils.cpp  ConnectionContextStore.cpp  Log.cpp  Stato.podspec  StatoClientFactory.cpp  StatoClientManager.cpp  StatoConnectionImpl.cpp  StatoDefaultClient.cpp  StatoRSocketResponder.cpp  StatoState.cpp  StatoStep.cpp
common/common-stato/src/main/cpp/stato/: CertificateUtils.h  ConnectionContextStore.h  FireAndForgetBasedStatoResponder.h  Log.h  StatoClient.h  StatoClientConfig.h  StatoClientFactory.h  StatoClientManager.h  StatoConnection.h  StatoConnectionImpl.h  StatoDefaultClient.h  StatoPlugin.h  StatoPluginConnection.h  StatoPluginConnectionImpl.h  StatoRSocketResponder.h  StatoResponder.h  StatoResponderImpl.h  StatoState.h  StatoStateUpdateListener.h
common/common-stato/src/main/cpp/stato/common/: types.h
common/common-stato/src/main/cpp/stato/utils/: CallstackHelper.h  Singleton.h
common/common-stato/src/main/cpp/utils/: CallstackHelper.cpp  StringUtil.cpp
common/common-stato/src/test/cpp/: StatoResponderImplTests.cpp
common/common-stato/src/test/cpp/lib/: StatoConnectionManagerMock.h
common/xplat/: CMakeLists.txt  build.gradle.kts
common/xplat/Flipper/: ConnectionContextStore.cpp  FlipperClient.cpp  FlipperConnectionImpl.h  Log.cpp  Log.h
common/xplat/States/: CertificateUtils.cpp  ConnectionContextStore.cpp  ConnectionContextStore.h  FireAndForgetBasedStatesResponder.h  Log.cpp  Log.h  States.podspec  StatesClient.cpp  StatesClient.h  StatesConnection.h  StatesConnectionImpl.h  StatesConnectionManager.h  StatesConnectionManagerImpl.cpp  StatesConnectionManagerImpl.h  StatesInitConfig.h  StatesPlugin.h  StatesRSocketResponder.cpp  StatesRSocketResponder.h  StatesResponder.h  StatesResponderImpl.h  StatesState.cpp  StatesState.h  StatesStateUpdateListener.h  StatesStep.cpp  StatesStep.h
common/xplat/States/utils/: CallstackHelper.h
common/xplat/StatesTestLib/: ConnectionContextStoreMock.h  StatesConnectionManagerMock.h  StatesConnectionMock.h  StatesPluginMock.h  StatesResponderMock.h
common/xplat/StatesTests/: StatesClientTests.cpp  StatesConnectionManagerImplTerminationTests.cpp  StatesRSocketResponderTests.cpp  StatesResponderImplTests.cpp
common/xplat/Stato/: CertificateUtils.cpp  ConnectionContextStore.cpp  ConnectionContextStore.h  FireAndForgetBasedStatoResponder.h  Log.cpp  Log.h  Stato.podspec  StatoClient.cpp  StatoClient.h  StatoConnection.h  StatoConnectionImpl.h  StatoConnectionManager.h  StatoConnectionManagerImpl.cpp  StatoConnectionManagerImpl.h  StatoInitConfig.h  StatoPlugin.h  StatoRSocketResponder.cpp  StatoRSocketResponder.h  StatoResponder.h  StatoResponderImpl.h  StatoState.cpp  StatoState.h  StatoStateUpdateListener.h  StatoStep.cpp  StatoStep.h
common/xplat/Stato/utils/: CallstackHelper.h
common/xplat/StatoTestLib/: ConnectionContextStoreMock.h  StatoConnectionMock.h  StatoPluginMock.h
common/xplat/StatoTests/: StatoClientTests.cpp  StatoRSocketResponderTests.cpp
desktop/: .eslintignore  .eslintrc.js  .flowconfig  .gitignore  .prettierrc.js  .yarnrc  flipper.code-workspace  lerna.json  package.json  tsconfig.json
desktop/@types/: tsconfig.json
desktop/flow-typed/: jss.js  material-ui-core-styles.flow.js  material-ui-core.flow.js  material-ui-styles.flow.js  react.js
desktop/scripts/: build-release.js  build-utils.js  metro-transform.js  start-dev-server.js  yarn-install.js
desktop/src/: App.js  App.tsx  Client.js  Client.tsx  GlobalTypes.ts  MenuBar.ts  NotificationsHub.tsx  PluginContainer.tsx  PluginTypes.ts  TableNativePlugin.js  TableNativePlugin.tsx  UninitializedClient.ts  createTablePlugin.js  createTablePlugin.tsx  index.js  index.tsx  init.js  init.tsx  plugin.js  plugin.tsx  server.js  server.tsx  tsconfig.json
desktop/src-js/: App.js  PluginContainer.js  index.js  init.js  plugin.js  server.js
desktop/src/fb-stubs/: GK.js  (+6 more)
desktop/static/: compilePlugins.ts  globalTestSetup.ts  index.js  index.tsx  launcher.ts  package.json  serviceWorker.ts  setup.ts  tsconfig.json
desktop/static-js/: package.json
docs/: network-plugin.md
gradle/: android-maven-install.gradle  android-tasks.gradle  bintray.gradle  buildscript.gradle  common.settings.gradle.kts  gradle-mvn-push.gradle  release-bintray.gradle
libs/fbjni/: CMakeLists.txt  build.gradle
models/: CMakeLists.txt
models/cmake/: StatoModelsConfig.cmake.in
models/scripts/: env.sh
models/scripts/cpp/: build-cpp-host.sh
models/scripts/javascript/: build-javascript.sh  publish-javascript.sh
models/scripts/javascript/assets/: package.json  tsconfig.json
models/src/main/proto/: Envelope.proto  Payload.proto  PayloadType.proto  SDKState.proto
scripts/: install-dependencies.sh  setup-env.sh
src/: plugin.js
src/dispatcher/: androidDevice.js
xplat/: CMakeLists.txt  build.gradle
(+329 files in other folders)
